--- a/src/App.css
+++ b/src/App.css
@@ -100,3 +100,18 @@ input, select {
 .filter-options div {
   flex: 1 1 0;
 }
+
+@media screen and (max-width: 447px) {
+  .filter-options {
+    flex-direction: column;
+    gap: 0;
+  }
+  .todo {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .content {
+    margin-bottom: 10px;
+  }
+
+}
